Update to Umbrac 16 rc5.  Change how imports are done to an alias to support npm api

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ src/.idea
 *.tsbuildinfo
 /src/TinyMCE.Umbraco.Client/dist/
 /src/TinyMCE.Umbraco.Client/dist-cms/
+/src/TinyMCE.Umbraco.Client/*.tgz
