--- a/src/TinyMCE.Umbraco.Client/package.json
+++ b/src/TinyMCE.Umbraco.Client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tiny-mce-umbraco/backoffice",
-	"version": "16.0.0-rc2.2",
+	"version": "16.0.0-rc3",
 	"description": "This Umbraco CMS package enables access to the TinyMCE-based Rich Text Editor (RTE) in version 16 and above. It also supports the use of TinyMCE Premium plugins with a valid subscription. Additional features include streamlined configuration for RTE Data Types in Umbraco and enhanced settings that support direct JSON-based configuration via .NET (appsettings.config).",
 	"keywords": [
 		"umbraco",
@@ -15,7 +15,7 @@
 	"type": "module",
 	"exports": {
 		".": null,
-		"./tiny-mce-umbraco": "./dist-cms/index.js",
+		"./core": "./dist-cms/index.js",
 		"./external/tinymce": "./dist-cms/external/tinymce/index.js"
 	},
 	"types": "types/index.d.ts",
@@ -30,14 +30,6 @@
 		"pack:api": "npm pack",
 		"generate-client": "node scripts/generate-openapi.js https://localhost:44308/umbraco/swagger/tiny-mce/swagger.json"
 	},
-	"files": [ "dist" ],
-	"keywords": [
-		"umbraco",
-		"tinymce",
-		"rte"
-	],
-	"author": "ProWorks Corporation",
-	"license": "MIT",
 	"dependencies": {
 		"tinymce": "^6.8.5",
 		"tinymce-i18n": "^24.12.30"
@@ -48,7 +40,7 @@
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@rollup/plugin-replace": "^6.0.2",
-		"@umbraco-cms/backoffice": "^16.0.0-rc3",
+		"@umbraco-cms/backoffice": "^16.0.0-rc4",
 		"chalk": "^5.3.0",
 		"cross-env": "7.0.3",
 		"eslint": "^9.25.1",
@@ -63,7 +55,7 @@
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"peerDependencies": {
-		"@umbraco-cms/backoffice": "^16.0.0-rc3",
+		"@umbraco-cms/backoffice": "^16.0.0-rc4",
 		"tinymce": "^6.8.5",
 		"tinymce-i18n": "^24.12.30"
 	}
