Fixes for custom plugins.  Align with rc6 of Umbraco v16

--- a/src/TinyMCE.Umbraco.TestSite/uSync/v16/DataTypes/TinyMCEFullConfiguration.config
+++ b/src/TinyMCE.Umbraco.TestSite/uSync/v16/DataTypes/TinyMCEFullConfiguration.config
@@ -33,7 +33,25 @@
     "help",
     "insertdatetime",
     "searchreplace",
-    "wordcount"
+    "wordcount",
+    "a11ychecker",
+    "advcode",
+    "advtable",
+    "advtemplate",
+    "typography",
+    "ai",
+    "casechange",
+    "checklist",
+    "mediaembed",
+    "export",
+    "footnotes",
+    "formatpainter",
+    "mergetags",
+    "pageembed",
+    "powerpaste",
+    "permanentpen",
+    "tinymcespellchecker",
+    "tableofcontents"
   ],
   "toolbar": [
     "undo",
@@ -81,7 +99,24 @@
     "help",
     "insertdatetime",
     "searchreplace",
-    "wordcount"
+    "wordcount",
+    "a11ycheck",
+    "code",
+    "inserttemplate",
+    "typography",
+    "aishortcuts aidialog",
+    "casechange",
+    "checklist",
+    "media",
+    "export",
+    "footnotes",
+    "formatpainter",
+    "mergetags",
+    "pageembed",
+    "paste",
+    "permanentpen",
+    "spellchecker",
+    "tableofcontents"
   ]
 }]]></Config>
 </DataType>
