#110 - Added configuration for the OpenAi API calls

--- a/src/TinyMCE.Umbraco.TestSite/appsettings.json
+++ b/src/TinyMCE.Umbraco.TestSite/appsettings.json
@@ -49,6 +49,11 @@
     "tinyMceVersion": "6",
     //"tinyMceUrl": "https://cdn.tiny.cloud/1/${apiKey}/tinymce/${version}/",
     "pluginsToExclude": [],
+    "openAiApiConfig": {
+      "model": "gpt-5",
+      "developerMessage": "You are a helpful assistant for a cms content editor.",
+      "maxCompletionTokens":  1000
+    },
     "customConfig": {
       "spellchecker_ignore_list": [ "senectus", "malesuada" ],
       "advtemplate_templates": [
