--- a/src/TinyMCE.Umbraco.Client/package.json
+++ b/src/TinyMCE.Umbraco.Client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tiny-mce-umbraco/backoffice",
-	"version": "17.0.0-rc2",
+	"version": "17.0.0",
 	"description": "This Umbraco CMS package enables access to the TinyMCE-based Rich Text Editor (RTE) in version 16 and above. It also supports the use of TinyMCE Premium plugins with a valid subscription. Additional features include streamlined configuration for RTE Data Types in Umbraco and enhanced settings that support direct JSON-based configuration via .NET (appsettings.config).",
 	"keywords": [
 		"umbraco",
@@ -35,27 +35,26 @@
 		"tinymce-i18n": "^24.12.30"
 	},
 	"devDependencies": {
-		"@hey-api/client-fetch": "^0.12.0",
-		"@hey-api/openapi-ts": "^0.71.0",
+		"@hey-api/openapi-ts": "^0.85.0",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@rollup/plugin-replace": "^6.0.2",
-		"@umbraco-cms/backoffice": "^17.0.0-rc1",
+		"@umbraco-cms/backoffice": "^17.0.0",
 		"chalk": "^5.3.0",
-		"cross-env": "7.0.3",
-		"eslint": "^9.25.1",
+		"cross-env": "^10.1.0",
+		"eslint": "^9.37.0",
 		"node-fetch": "^3.3.2",
 		"rollup": "^4.40.0",
 		"rollup-plugin-esbuild": "^6.2.1",
 		"rollup-plugin-import-css": "^3.5.8",
 		"tiny-glob": "^0.2.9",
-		"typescript": "^5.8.3",
-		"vite": "^6.3.5",
-		"vite-plugin-static-copy": "^2.3.1",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.11",
+		"vite-plugin-static-copy": "^3.1.3",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"peerDependencies": {
-		"@umbraco-cms/backoffice": "^17.0.0-rc1",
+		"@umbraco-cms/backoffice": "^17.0.0",
 		"tinymce": "^6.8.5",
 		"tinymce-i18n": "^24.12.30"
 	}
