--- a/src/TinyMCE.Umbraco.TestSite/uSync/v17/DataTypes/TinyMCEDefaultConfiguration.config
+++ b/src/TinyMCE.Umbraco.TestSite/uSync/v17/DataTypes/TinyMCEDefaultConfiguration.config
@@ -7,8 +7,14 @@
     <Folder>TinyMCE</Folder>
   </Info>
   <Config><![CDATA[{
+  "customConfig": {
+    "tes": "test"
+  },
   "maxImageSize": 500,
   "mode": "Classic",
+  "stylesheets": [
+    "/rte-styles.css"
+  ],
   "toolbar": [
     "styles",
     "bold",
