Added test config for boolean fix

--- a/src/TinyMCE.Umbraco.TestSite/appsettings.json
+++ b/src/TinyMCE.Umbraco.TestSite/appsettings.json
@@ -55,6 +55,9 @@
       "maxCompletionTokens":  1000
     },
     "customConfig": {
+      "table_advtab": false,
+      "table_row_advtab": false,
+      "table_cell_advtab": false,
       "spellchecker_ignore_list": [ "senectus", "malesuada" ],
       "advtemplate_templates": [
         {
